# MZscript

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: github-actions.yml
Cogs/: newmainte.py
docs/: CONTRIBUTING.md  DOCS.md  startfile.py  website_plugin.py
docs/plugins/dashboard/: dashboard.py
docs/plugins/dashboard/static/: editcode.css  editcode.js  index.css  index.js  newcode.css  newcode.js
docs/plugins/dashboard/templates/: editcode.html  index.html  newcode.html
docs/plugins/website/: website_plugin.py
examples/plugins/: website.py
src/MZscript/: MZscript.py  __init__.py  base_plugin.py  database.py  functions_collector.py  functions_handler.py  main.py
src/MZscript/Functions/: __init__.py  main_functions.py  other_functions.py
src/MZscript/Functions/Administration/: __init__.py  roles.py
src/MZscript/Functions/Checks/: __init__.py  is_admin.py  is_channel_exists.py  is_guild_exists.py  is_member_exists.py  is_number.py  is_role_exists.py  is_user_exists.py
src/MZscript/Functions/Core/: __init__.py  request.py  varsdata.py  varsdatapy
src/MZscript/Functions/Extras/: __init__.py  extra_functions.py
src/MZscript/Functions/Has/: __init__.py  has_perms.py  has_role.py  hasrole.py
src/MZscript/Functions/Info/: __init__.py  bot_info.py  channel_info.py  channelinfo.py  guild_info.py  guildinfo.py  is_role_exists.py  message_info.py  role_info.py  roleinfo.py  user_in_guild.py  user_info.py  userinfo.py
src/MZscript/Functions/Is/: __init__.py  (+5 more)
tests/: __init__.py  test_client.py  test_handler.py  testclient.py  testhandler.py
(+23 files in other folders)
