[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MZscript"
version = "0.1.4"
dependencies = [
  "disnake>=2.9.2"
]
requires-python = ">=3.8"
authors = [
  {name = "MZshnik"}
]
description = "Improved BDFD interpreter in Python"
readme = "README.md"
classifiers = [
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/MZshnik/MZscript"