[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MZscript"
version = "1.0.0"
dependencies = [
  "disnake>=2.9.2"
]
requires-python = ">=3.8"
authors = [
  {name = "MZshnik"}
]
description = "Improved BDFD interpreter in Python"
readme = "README.md"
license = {text = "MIT License"}
classifiers = [
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/MZshnik/MZscript"
Documentation = "https://mzscript.vercel.app/"
Repository = "https://github.com/MZshnik/MZscript"
Issues = "https://github.com/MZshnik/MZscript/issues"